tested judgments
Signed-off-by: Anthony Leong <aj.leong623@gmail.com>